nop-mermaid/src/main/java/io/nop/mermaid/parse/antlr/MermaidParser.java
// Nop Generated from Mermaid.g4 by ANTLR 4.13.0
package io.nop.mermaid.parse.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*; //NOPMD - suppressed UnusedImports - Auto Gen Code
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator; //NOPMD - suppressed UnusedImports - Auto Gen Code
import java.util.ArrayList; //NOPMD - suppressed UnusedImports - Auto Gen Code

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
// tell cpd to start ignoring code - CPD-OFF
public class MermaidParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FLOWCHART=1, SEQUENCE=2, CLASS=3, STATE=4, GANTT=5, PIE=6, GIT=7, ER=8, 
		JOURNEY=9, TB=10, BT=11, LR=12, RL=13, ROUND=14, STADIUM=15, SUBROUTINE=16, 
		CYLINDER=17, CIRCLE=18, ASYMMETRIC=19, RHOMBUS=20, HEXAGON=21, PARALLELOGRAM=22, 
		TRAPEZOID=23, DOUBLE_CIRCLE=24, ARROW=25, OPEN_ARROW=26, DOTTED=27, THICK=28, 
		PARTICIPANT=29, AS=30, TASK=31, SUBGRAPH=32, STYLE=33, STATIC=34, Visibility=35, 
		LPAREN=36, RPAREN=37, LCURLY=38, RCURLY=39, LBRACE=40, RBRACE=41, COLON=42, 
		SEMI=43, COMMA=44, DOT=45, PIPE=46, StringLiteral_=47, NumberLiteral_=48, 
		Identifier_=49, COMMENT=50, WS=51, DIRECTION=52, Identifier=53;
	public static final int
		RULE_mermaidDocument = 0, RULE_mermaidDiagramType_ = 1, RULE_mermaidStatements_ = 2, 
		RULE_mermaidStatement = 3, RULE_mermaidDirectionStatement = 4, RULE_mermaidDirection_ = 5, 
		RULE_mermaidComment = 6, RULE_mermaidFlowNode = 7, RULE_mermaidNodeShape_ = 8, 
		RULE_mermaidFlowEdge = 9, RULE_mermaidEdgeType_ = 10, RULE_mermaidFlowSubgraph = 11, 
		RULE_mermaidParticipant = 12, RULE_mermaidSequenceMessage = 13, RULE_mermaidClassNode = 14, 
		RULE_mermaidClassMembers_ = 15, RULE_mermaidClassMember = 16, RULE_mermaidStateNode = 17, 
		RULE_mermaidGanttTask = 18, RULE_mermaidPieItem = 19, RULE_mermaidStyleStatement = 20, 
		RULE_mermaidStyleAttributes_ = 21, RULE_mermaidStyleAttribute = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"mermaidDocument", "mermaidDiagramType_", "mermaidStatements_", "mermaidStatement", 
			"mermaidDirectionStatement", "mermaidDirection_", "mermaidComment", "mermaidFlowNode", 
			"mermaidNodeShape_", "mermaidFlowEdge", "mermaidEdgeType_", "mermaidFlowSubgraph", 
			"mermaidParticipant", "mermaidSequenceMessage", "mermaidClassNode", "mermaidClassMembers_", 
			"mermaidClassMember", "mermaidStateNode", "mermaidGanttTask", "mermaidPieItem", 
			"mermaidStyleStatement", "mermaidStyleAttributes_", "mermaidStyleAttribute"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'sequenceDiagram'", "'classDiagram'", "'stateDiagram'", 
			"'gantt'", "'pie'", "'git'", "'er'", "'journey'", null, "'BT'", "'LR'", 
			"'RL'", "'round'", "'stadium'", "'subroutine'", "'cylinder'", "'circle'", 
			"'asymmetric'", "'rhombus'", "'hexagon'", "'parallelogram'", "'trapezoid'", 
			"'double_circle'", "'-->'", "'->>'", "'-.->'", "'==>'", "'participant'", 
			"'as'", "'task'", "'subgraph'", "'style'", "'static'", null, "'('", "')'", 
			"'{'", "'}'", "'['", "']'", "':'", "';'", "','", "'.'", "'|'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FLOWCHART", "SEQUENCE", "CLASS", "STATE", "GANTT", "PIE", "GIT", 
			"ER", "JOURNEY", "TB", "BT", "LR", "RL", "ROUND", "STADIUM", "SUBROUTINE", 
			"CYLINDER", "CIRCLE", "ASYMMETRIC", "RHOMBUS", "HEXAGON", "PARALLELOGRAM", 
			"TRAPEZOID", "DOUBLE_CIRCLE", "ARROW", "OPEN_ARROW", "DOTTED", "THICK", 
			"PARTICIPANT", "AS", "TASK", "SUBGRAPH", "STYLE", "STATIC", "Visibility", 
			"LPAREN", "RPAREN", "LCURLY", "RCURLY", "LBRACE", "RBRACE", "COLON", 
			"SEMI", "COMMA", "DOT", "PIPE", "StringLiteral_", "NumberLiteral_", "Identifier_", 
			"COMMENT", "WS", "DIRECTION", "Identifier"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Mermaid.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MermaidParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MermaidDocumentContext extends ParserRuleContext {
		public MermaidDiagramType_Context type;
		public MermaidStatements_Context statements;
		public MermaidDiagramType_Context mermaidDiagramType_() {
			return getRuleContext(MermaidDiagramType_Context.class,0);
		}
		public MermaidStatements_Context mermaidStatements_() {
			return getRuleContext(MermaidStatements_Context.class,0);
		}
		public MermaidDocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mermaidDocument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MermaidListener ) ((MermaidListener)listener).enterMermaidDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MermaidListener ) ((MermaidListener)listener).exitMermaidDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MermaidVisitor ) return ((MermaidVisitor<? extends T>)visitor).visitMermaidDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MermaidDocumentContext mermaidDocument() throws RecognitionException {
		MermaidDocumentContext _localctx = new MermaidDocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mermaidDocument);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			((MermaidDocumentContext)_localctx).type = mermaidDiagramType_();
			setState(47);
			((MermaidDocumentContext)_localctx).statements = mermaidStatements_();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MermaidDiagramType_Context extends ParserRuleContext {
		public TerminalNode FLOWCHART() { return getToken(MermaidParser.FLOWCHART, 0); }
		public TerminalNode SEQUENCE() { return getToken(MermaidParser.SEQUENCE, 0); }
		public TerminalNode CLASS() { return getToken(MermaidParser.CLASS, 0); }
		public TerminalNode STATE() { return getToken(MermaidParser.STATE, 0); }
		public TerminalNode GANTT() { return getToken(MermaidParser.GANTT, 0); }
		public TerminalNode PIE() { return getToken(MermaidParser.PIE, 0); }
		public TerminalNode GIT() { return getToken(MermaidParser.GIT, 0); }
		public TerminalNode ER() { return getToken(MermaidParser.ER, 0); }
		public TerminalNode JOURNEY() { return getToken(MermaidParser.JOURNEY, 0); }
		public MermaidDiagramType_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mermaidDiagramType_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MermaidListener ) ((MermaidListener)listener).enterMermaidDiagramType_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MermaidListener ) ((MermaidListener)listener).exitMermaidDiagramType_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MermaidVisitor ) return ((MermaidVisitor<? extends T>)visitor).visitMermaidDiagramType_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MermaidDiagramType_Context mermaidDiagramType_() throws RecognitionException {
		MermaidDiagramType_Context _localctx = new MermaidDiagramType_Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_mermaidDiagramType_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1022L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MermaidStatements_Context extends ParserRuleContext {
		public MermaidStatementContext e;
		public List<MermaidStatementContext> mermaidStatement() {
			return getRuleContexts(MermaidStatementContext.class);
		}
		public MermaidStatementContext mermaidStatement(int i) {
			return getRuleContext(MermaidStatementContext.class,i);
		}
		public MermaidStatements_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mermaidStatements_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MermaidListener ) ((MermaidListener)listener).enterMermaidStatements_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MermaidListener ) ((MermaidListener)listener).exitMermaidStatements_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MermaidVisitor ) return ((MermaidVisitor<? extends T>)visitor).visitMermaidStatements_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MermaidStatements_Context mermaidStatements_() throws RecognitionException {
		MermaidStatements_Context _localctx = new MermaidStatements_Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_mermaidStatements_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(51);
				((MermaidStatements_Context)_localctx).e = mermaidStatement();
				}
				}
				setState(54); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 6192465056890968L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MermaidStatementContext extends ParserRuleContext {
		public MermaidDirectionStatementContext mermaidDirectionStatement() {
			return getRuleContext(MermaidDirectionStatementContext.class,0);
		}
		public MermaidCommentContext mermaidComment() {
			return getRuleContext(MermaidCommentContext.class,0);
		}
		public MermaidFlowNodeContext mermaidFlowNode() {
			return getRuleContext(MermaidFlowNodeContext.class,0);
		}
		public MermaidFlowEdgeContext mermaidFlowEdge() {
			return getRuleContext(MermaidFlowEdgeContext.class,0);
		}
		public MermaidFlowSubgraphContext mermaidFlowSubgraph() {
			return getRuleContext(MermaidFlowSubgraphContext.class,0);
		}
		public MermaidParticipantContext mermaidParticipant() {
			return getRuleContext(MermaidParticipantContext.class,0);
		}
		public MermaidSequenceMessageContext mermaidSequenceMessage() {
			return getRuleContext(MermaidSequenceMessageContext.class,0);
		}
		public MermaidClassNodeContext mermaidClassNode() {
			return getRuleContext(MermaidClassNodeContext.class,0);
		}
		public MermaidStateNodeContext mermaidStateNode() {
			return getRuleContext(MermaidStateNodeContext.class,0);
		}
		public MermaidGanttTaskContext mermaidGanttTask() {
			return getRuleContext(MermaidGanttTaskContext.class,0);
		}
		public MermaidPieItemContext mermaidPieItem() {
			return getRuleContext(MermaidPieItemContext.class,0);
		}
		public MermaidStyleStatementContext mermaidStyleStatement() {
			return getRuleContext(MermaidStyleStatementContext.class,0);
		}
		public MermaidStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mermaidStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MermaidListener ) ((MermaidListener)listener).enterMermaidStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MermaidListener ) ((MermaidListener)listener).exitMermaidStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MermaidVisitor ) return ((MermaidVisitor<? extends T>)visitor).visitMermaidStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MermaidStatementContext mermaidStatement() throws RecognitionException {
		MermaidStatementContext _localctx = new MermaidStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mermaidStatement);
		try {
			setState(68);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				mermaidDirectionStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				mermaidComment();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(58);
				mermaidFlowNode();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(59);
				mermaidFlowEdge();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(60);
				mermaidFlowSubgraph();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(61);
				mermaidParticipant();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(62);
				mermaidSequenceMessage();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(63);
				mermaidClassNode();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(64);
				mermaidStateNode();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(65);
				mermaidGanttTask();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(66);
				mermaidPieItem();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(67);
				mermaidStyleStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MermaidDirectionStatementContext extends ParserRuleContext {
		public MermaidDirection_Context direction;
		public TerminalNode DIRECTION() { return getToken(MermaidParser.DIRECTION, 0); }
		public MermaidDirection_Context mermaidDirection_() {
			return getRuleContext(MermaidDirection_Context.class,0);
		}
		public MermaidDirectionStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mermaidDirectionStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MermaidListener ) ((MermaidListener)listener).enterMermaidDirectionStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MermaidListener ) ((MermaidListener)listener).exitMermaidDirectionStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MermaidVisitor ) return ((MermaidVisitor<? extends T>)visitor).visitMermaidDirectionStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MermaidDirectionStatementContext mermaidDirectionStatement() throws RecognitionException {
		MermaidDirectionStatementContext _localctx = new MermaidDirectionStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_mermaidDirectionStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(DIRECTION);
			setState(71);
			((MermaidDirectionStatementContext)_localctx).direction = mermaidDirection_();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MermaidDirection_Context extends ParserRuleContext {
		public TerminalNode TB() { return getToken(MermaidParser.TB, 0); }
		public TerminalNode BT() { return getToken(MermaidParser.BT, 0); }
		public TerminalNode LR() { return getToken(MermaidParser.LR, 0); }
		public TerminalNode RL() { return getToken(MermaidParser.RL, 0); }
		public MermaidDirection_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mermaidDirection_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MermaidListener ) ((MermaidListener)listener).enterMermaidDirection_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MermaidListener ) ((MermaidListener)listener).exitMermaidDirection_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MermaidVisitor ) return ((MermaidVisitor<? extends T>)visitor).visitMermaidDirection_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MermaidDirection_Context mermaidDirection_() throws RecognitionException {
		MermaidDirection_Context _localctx = new MermaidDirection_Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_mermaidDirection_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 15360L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MermaidCommentContext extends ParserRuleContext {
		public Token content;
		public TerminalNode COMMENT() { return getToken(MermaidParser.COMMENT, 0); }
		public TerminalNode StringLiteral_() { return getToken(MermaidParser.StringLiteral_, 0); }
		public MermaidCommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mermaidComment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MermaidListener ) ((MermaidListener)listener).enterMermaidComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MermaidListener ) ((MermaidListener)listener).exitMermaidComment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MermaidVisitor ) return ((MermaidVisitor<? extends T>)visitor).visitMermaidComment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MermaidCommentContext mermaidComment() throws RecognitionException {
		MermaidCommentContext _localctx = new MermaidCommentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_mermaidComment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(COMMENT);
			setState(76);
			((MermaidCommentContext)_localctx).content = match(StringLiteral_);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MermaidFlowNodeContext extends ParserRuleContext {
		public Token id;
		public Token text;
		public MermaidNodeShape_Context shape;
		public TerminalNode Identifier_() { return getToken(MermaidParser.Identifier_, 0); }
		public TerminalNode LPAREN() { return getToken(MermaidParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(MermaidParser.RPAREN, 0); }
		public MermaidNodeShape_Context mermaidNodeShape_() {
			return getRuleContext(MermaidNodeShape_Context.class,0);
		}
		public TerminalNode StringLiteral_() { return getToken(MermaidParser.StringLiteral_, 0); }
		public MermaidFlowNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mermaidFlowNode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MermaidListener ) ((MermaidListener)listener).enterMermaidFlowNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MermaidListener ) ((MermaidListener)listener).exitMermaidFlowNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MermaidVisitor ) return ((MermaidVisitor<? extends T>)visitor).visitMermaidFlowNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MermaidFlowNodeContext mermaidFlowNode() throws RecognitionException {
		MermaidFlowNodeContext _localctx = new MermaidFlowNodeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_mermaidFlowNode);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			((MermaidFlowNodeContext)_localctx).id = match(Identifier_);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(79);
				match(LPAREN);
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==StringLiteral_) {
					{
					setState(80);
					((MermaidFlowNodeContext)_localctx).text = match(StringLiteral_);
					}
				}

				setState(83);
				match(RPAREN);
				}
			}

			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 33538048L) != 0)) {
				{
				setState(86);
				((MermaidFlowNodeContext)_localctx).shape = mermaidNodeShape_();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MermaidNodeShape_Context extends ParserRuleContext {
		public TerminalNode ROUND() { return getToken(MermaidParser.ROUND, 0); }
		public TerminalNode STADIUM() { return getToken(MermaidParser.STADIUM, 0); }
		public TerminalNode SUBROUTINE() { return getToken(MermaidParser.SUBROUTINE, 0); }
		public TerminalNode CYLINDER() { return getToken(MermaidParser.CYLINDER, 0); }
		public TerminalNode CIRCLE() { return getToken(MermaidParser.CIRCLE, 0); }
		public TerminalNode ASYMMETRIC() { return getToken(MermaidParser.ASYMMETRIC, 0); }
		public TerminalNode RHOMBUS() { return getToken(MermaidParser.RHOMBUS, 0); }
		public TerminalNode HEXAGON() { return getToken(MermaidParser.HEXAGON, 0); }
		public TerminalNode PARALLELOGRAM() { return getToken(MermaidParser.PARALLELOGRAM, 0); }
		public TerminalNode TRAPEZOID() { return getToken(MermaidParser.TRAPEZOID, 0); }
		public TerminalNode DOUBLE_CIRCLE() { return getToken(MermaidParser.DOUBLE_CIRCLE, 0); }
		public MermaidNodeShape_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mermaidNodeShape_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MermaidListener ) ((MermaidListener)listener).enterMermaidNodeShape_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MermaidListener ) ((MermaidListener)listener).exitMermaidNodeShape_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MermaidVisitor ) return ((MermaidVisitor<? extends T>)visitor).visitMermaidNodeShape_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MermaidNodeShape_Context mermaidNodeShape_() throws RecognitionException {
		MermaidNodeShape_Context _localctx = new MermaidNodeShape_Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_mermaidNodeShape_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 33538048L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MermaidFlowEdgeContext extends ParserRuleContext {
		public Token from;
		public MermaidEdgeType_Context edgeType;
		public Token label;
		public Token to;
		public List<TerminalNode> Identifier_() { return getTokens(MermaidParser.Identifier_); }
		public TerminalNode Identifier_(int i) {
			return getToken(MermaidParser.Identifier_, i);
		}
		public MermaidEdgeType_Context mermaidEdgeType_() {
			return getRuleContext(MermaidEdgeType_Context.class,0);
		}
		public TerminalNode StringLiteral_() { return getToken(MermaidParser.StringLiteral_, 0); }
		public MermaidFlowEdgeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mermaidFlowEdge; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MermaidListener ) ((MermaidListener)listener).enterMermaidFlowEdge(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MermaidListener ) ((MermaidListener)listener).exitMermaidFlowEdge(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MermaidVisitor ) return ((MermaidVisitor<? extends T>)visitor).visitMermaidFlowEdge(this);
			else return visitor.visitChildren(this);
		}
	}
